terminei de colocar as fotos no sites q faltava

--- a/index.html
+++ b/index.html
@@ -48,4 +48,5 @@
     <img src="imagens/u2logo.jpg" alt="U2 é uma banda irlandesa de rock formada no ano de 1976. O grupo é composto por Bono (vocal e guitarra), The Edge (guitarra, teclado e backing vocal), Adam Clayton (baixo) e Larry Mullen Jr.">
    </a>
    <p>U2 é uma banda irlandesa de rock formada no ano de 1976. O grupo é composto por Bono (vocal e guitarra), The Edge (guitarra, teclado e backing vocal), Adam Clayton (baixo) e Larry Mullen Jr. (bateria e percussão). Inicialmente, o estilo musical da banda possuía influências no gênero pós-punk. Porém, eventualmente foram incorporando estilos mais genéricos. Ao longo das mudanças do grupo, eles sempre têm mantido um som construído sobre instrumentos melódicos, com destaque para as texturas e acordes do guitarrista de The Edge e dos vocais expressivos de Bono. Suas letras, muitas vezes embelezadas com imagens espirituais, têm foco em temas pessoais e preocupações sócio-políticas.</p>
+ </body>
 </html>
