--- a/pages/nirvana.html
+++ b/pages/nirvana.html
@@ -12,16 +12,16 @@
     <p>Em 1989, após pegar dinheiro emprestado com um amigo, a banda já batizada como Nirvana grava seu primeiro álbum de estúdio, Bleach, com o baterista Chad Channing. Mesmo com um grande sucesso no meio underground, o baterista Chad acabou dando o fora. Kurt e Krist então foram atrás de um outro baterista, e então, conheceram Dave Grohl e a banda foi ficando popular.</p>
     <table>
         <tr>
-          <td><img src="../imagens/thebeatles2.jpg" alt=""></td>
-          <td><img src="../imagens/thebeatles.jpg" alt=""></td>
-          <td><img src="../imagens/thebeatles3.jpg" alt=""></td>
-          <td> <img src="../imagens/thebeatles3.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana1.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana2.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana3.jpg" alt=""></td>
+          <td> <img src="../imagens/nirvana4.jpg" alt=""></td>
         </tr>
         <tr>
-            <td><img src="../imagens/thebeatles2.jpg" alt=""></td>
-            <td><img src="../imagens/thebeatles.jpg" alt=""></td>
-            <td><img src="../imagens/thebeatles3.jpg" alt=""></td>
-            <td><img src="../imagens/thebeatles3.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana1.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana2.jpg" alt=""></td>
+          <td><img src="../imagens/nirvana3.jpg" alt=""></td>
+          <td> <img src="../imagens/nirvana4.jpg" alt=""></td>
           </tr>
       </table>
 </body>
